--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
     "ngx-clipboard": "^13.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
