--- a/src/assets/areas.json
+++ b/src/assets/areas.json
@@ -888,12 +888,12 @@
 	"MaxXP": 3950,
 	"isGenerator": ""
 }, {
-	"Id": 128,
-	"Area": "Mt. Da-Chao",
-	"Realm": "FF7",
-	"MinXP": "F7",
-	"MaxXP": "7        1400",
-	"isGenerator": ""
+    "Id": 128,
+    "Area": "Mt. Da-Chao",
+    "Realm": "FF7",
+    "MinXP": "9657",
+    "MaxXP": "14000",
+    "isGenerator": ""
 }, {
 	"Id": 129,
 	"Area": "Mt. Nibel",
