--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "bootstrap": "^4.4.1",
+    "bootswatch": "^4.4.1",
     "firebase-tools": "^8.0.2",
     "ngx-clipboard": "^13.0.0",
     "rxjs": "~6.5.4",
