--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
               "src/styles.css",
               "node_modules/bootswatch/dist/darkly/bootstrap.min.css"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -121,7 +120,7 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy",
+          "builder": "@angular/fire:deploy",
           "options": {}
         }
       }
